<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="onClickListener"
            type="android.view.View.OnClickListener"/>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <RelativeLayout
            android:id="@+id/current_re_top"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="5dp"
            android:background="@color/appColor">

            <RelativeLayout
                android:id="@+id/current_rl_back_current"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:background="@drawable/select_bg"
                android:onClick="@{onClickListener}">

                <ImageView
                    android:id="@+id/current_iv_back_current"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:src="@mipmap/back" />
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:text="登陆"
                android:textColor="@color/bg_White"
                android:textSize="14sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/pwd_btn_login_top"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/buttongray"
            android:text="@string/login"
            android:textColor="@color/white"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bg_Gray"
            android:layout_marginTop="30dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="#f0f5f8"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:id="@+id/pwd_tv_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/pla_CustomTextView1"
                    android:text="@string/telephone"/>

                <EditText
                    android:id="@+id/pwd_et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/pwd_tv_phone"
                    android:layout_toRightOf="@+id/pwd_tv_phone"
                    android:background="#f0f5f8"
                    android:hint="@string/telephone_hind"
                    android:inputType="phone"
                    style="@style/pla_CustomEditText"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/gray"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp">

                <TextView
                    android:id="@+id/pwd_tv_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/pla_CustomTextView1"
                    android:text="@string/password"/>

                <EditText
                    android:id="@+id/pwd_et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/pwd_tv_password"
                    android:layout_toRightOf="@+id/pwd_tv_password"
                    android:background="#f0f5f8"
                    android:hint="@string/password_hind"
                    android:inputType="textPassword"
                    style="@style/pla_CustomEditText"
                    />
            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bg_Gray"/>

        <Button
            android:id="@+id/pwd_btn_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/buttonblue"
            android:text="@string/btn_login"
            android:textColor="@color/bg_White"
            android:textSize="14sp"
            style="?android:buttonBarButtonStyle"
            android:onClick="@{onClickListener}"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/pwd_tv_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_register"
                style="@style/pla_CustomTextView"
                android:onClick="@{onClickListener}"/>

            <TextView
                android:id="@+id/pwd_tv_forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                style="@style/pla_CustomTextView"
                android:text="@string/wjmm"
                android:onClick="@{onClickListener}"/>

            <TextView
                android:id="@+id/pwd_tv_codeLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:text="@string/code_login"
                style="@style/pla_CustomTextView"
                android:onClick="@{onClickListener}"/>
        </RelativeLayout>

    </LinearLayout>
</layout>